# static-analyzer

./: README.md  installing bison and reflex.rtf
analyzer/: CMakeLists.txt  README.md
analyzer/samples/: 42print.qk  GoodWalk.qk  LexChallenge.qk  Pt.qk  Sqr.qk  hands.qk  starter_parsable.qk
analyzer/src/: ASTBuiltIns.cxx  ASTNode.cxx  ASTNode.h  Builtins.c  Builtins.h  CMakeLists.txt  CodegenContext.h  Makefile  Messages.cxx  README.md  a.out  lex.yy.cpp  lex.yy.cxx  lex.yy.h  parser.cxx  quack.lxx  quack.output  quack.tab.cxx  quack.tab.hxx  quack.yxx  staticsemantics.cpp  staticsemantics.h
